--- a/.github/workflows/s3-release.yml
+++ b/.github/workflows/s3-release.yml
@@ -62,23 +62,41 @@ jobs:
         shell: bash
         run: |
           if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
-            echo "Installing AWS CLI on Linux..."
-            sudo apt update
-            sudo apt install -y unzip curl
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.15.30.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-            AWS_CLI_PATH="/usr/local/bin/aws"
+            echo "Checking for existing AWS CLI on Linux..."
+            if command -v aws &> /dev/null; then
+              echo "AWS CLI already installed, using existing installation"
+              AWS_CLI_PATH="aws"
+            else
+              echo "Installing AWS CLI on Linux..."
+              sudo apt update
+              sudo apt install -y unzip curl
+              curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-2.15.30.zip" -o "awscliv2.zip"
+              unzip awscliv2.zip
+              sudo ./aws/install --update
+              AWS_CLI_PATH="/usr/local/bin/aws"
+            fi
           elif [ "${{ matrix.os }}" = "windows-latest" ]; then
-            echo "Installing AWS CLI on Windows..."
-            curl "https://awscli.amazonaws.com/AWSCLIV2.msi" -o "AWSCLIV2.msi"
-            msiexec /i AWSCLIV2.msi /quiet
-            AWS_CLI_PATH="aws"
+            echo "Checking for existing AWS CLI on Windows..."
+            if command -v aws &> /dev/null; then
+              echo "AWS CLI already installed, using existing installation"
+              AWS_CLI_PATH="aws"
+            else
+              echo "Installing AWS CLI on Windows..."
+              curl "https://awscli.amazonaws.com/AWSCLIV2.msi" -o "AWSCLIV2.msi"
+              msiexec /i AWSCLIV2.msi /quiet
+              AWS_CLI_PATH="aws"
+            fi
           else
-            echo "Installing AWS CLI on macOS..."
-            curl "https://awscli.amazonaws.com/AWSCLIV2.pkg" -o "AWSCLIV2.pkg"
-            sudo installer -pkg AWSCLIV2.pkg -target /
-            AWS_CLI_PATH="/usr/local/bin/aws"
+            echo "Checking for existing AWS CLI on macOS..."
+            if command -v aws &> /dev/null; then
+              echo "AWS CLI already installed, using existing installation"
+              AWS_CLI_PATH="aws"
+            else
+              echo "Installing AWS CLI on macOS..."
+              curl "https://awscli.amazonaws.com/AWSCLIV2.pkg" -o "AWSCLIV2.pkg"
+              sudo installer -pkg AWSCLIV2.pkg -target /
+              AWS_CLI_PATH="/usr/local/bin/aws"
+            fi
           fi
           
           echo "AWS_CLI_PATH=$AWS_CLI_PATH" >> $GITHUB_ENV
