--- a/.github/workflows/s3-release.yml
+++ b/.github/workflows/s3-release.yml
@@ -42,9 +42,9 @@ jobs:
         shell: bash
         run: |
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            pyinstaller --onefile --name tts --add-data "models;models" main.py
+            pyinstaller --onefile --name tts --add-data "models;models" --hidden-import=piper --hidden-import=onnxruntime --hidden-import=numpy --collect-all piper --collect-all onnxruntime main.py
           else
-            pyinstaller --onefile --name tts --add-data "models:models" main.py
+            pyinstaller --onefile --name tts --add-data "models:models" --hidden-import=piper --hidden-import=onnxruntime --hidden-import=numpy --collect-all piper --collect-all onnxruntime main.py
           fi
 
       - name: Create directory structure for S3
