--- a/.github/workflows/s3-release.yml
+++ b/.github/workflows/s3-release.yml
@@ -9,17 +9,23 @@ jobs:
   build-and-upload:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
         include:
           - os: ubuntu-latest
             os_name: linux
             executable_name: tts
+            arch: x86_64
           - os: windows-latest
             os_name: windows
             executable_name: tts.exe
-          - os: macos-latest
-            os_name: macos
+            arch: x86_64
+          - os: macos-13
+            os_name: macos-intel
             executable_name: tts
+            arch: x86_64
+          - os: macos-latest
+            os_name: macos-arm64
+            executable_name: tts
+            arch: arm64
 
     runs-on: ${{ matrix.os }}
 
