--- a/.github/workflows/s3-release.yml
+++ b/.github/workflows/s3-release.yml
@@ -10,22 +10,26 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-20.04
+          - os: ubuntu-22.04
             os_name: linux
             executable_name: tts
             arch: x86_64
+            use_docker: true
           - os: windows-latest
             os_name: windows
             executable_name: tts.exe
             arch: x86_64
+            use_docker: false
           - os: macos-13
             os_name: macos-intel
             executable_name: tts
             arch: x86_64
+            use_docker: false
           - os: macos-latest
             os_name: macos-arm64
             executable_name: tts
             arch: arm64
+            use_docker: false
 
     runs-on: ${{ matrix.os }}
 
@@ -34,24 +38,46 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Python
+        if: matrix.use_docker == false
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      # Build Linux version in Docker for GLIBC compatibility
+      - name: Build Linux executable in Docker
+        if: matrix.use_docker == true
+        run: |
+          docker run --rm -v "$PWD":/workspace -w /workspace python:3.11-slim-bullseye bash -c "
+            apt-get update && apt-get install -y build-essential && \
+            python -m pip install --upgrade pip && \
+            pip install pyinstaller && \
+            pip install -r requirements.txt && \
+            pyinstaller --onefile --strip --name tts --add-data 'models:models' --hidden-import=piper --hidden-import=onnxruntime --hidden-import=numpy --collect-all piper --collect-all onnxruntime --noupx main.py
+          "
+
+      # Install system dependencies for better compatibility (non-Docker)
+      - name: Install system dependencies (Linux)
+        if: matrix.os == 'ubuntu-22.04' && matrix.use_docker == false
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential
+
+      - name: Install dependencies (non-Docker)
+        if: matrix.use_docker == false
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
           pip install -r requirements.txt
 
-      - name: Build executable with PyInstaller
+      - name: Build executable with PyInstaller (non-Docker)
+        if: matrix.use_docker == false
         shell: bash
         run: |
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
             pyinstaller --onefile --name tts --add-data "models;models" --hidden-import=piper --hidden-import=onnxruntime --hidden-import=numpy --collect-all piper --collect-all onnxruntime main.py
           else
-            # For Linux, add --strip option to reduce size and improve compatibility
-            pyinstaller --onefile --strip --name tts --add-data "models:models" --hidden-import=piper --hidden-import=onnxruntime --hidden-import=numpy --collect-all piper --collect-all onnxruntime main.py
+            # For macOS, add compatibility options
+            pyinstaller --onefile --strip --name tts --add-data "models:models" --hidden-import=piper --hidden-import=onnxruntime --hidden-import=numpy --collect-all piper --collect-all onnxruntime --noupx main.py
           fi
 
       - name: Create directory structure for S3
